# ipg_odom_module

bridge/: CMakeLists.txt  README.md  package.xml  parameters.yaml
bridge/launch/: main.launch  test.launch  testold.launch
bridge/pid/: CMakeLists.txt
bridge/src/: navigation_IPG_bridge.cpp
state_machine/: CMakeLists.txt  package.xml  setup.py
state_machine/launch/: parameters.launch  state_machine.launch
state_machine/src/: interface.py  ros_can.py  testvectorfield.py
state_machine/src/state_machine/: __init__.py
state_machine/state_machine/: interface.py  ros_can.py
state_machine/test/: testcases.py
